[project]
name = "olympus"
version = "1.0.0"
description = "A unified python environment integrating different custom tools for device and network analysis"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Gustavo Aragão", email = "gustavo.s.aragao.2003@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities"
]
dependencies = [
    "requests==2.32.3",
    "jsonschema==4.19.2",
    "packaging==24.2"
]

[project.urls]
"Homepage" = "https://github.com/devKaos117/Olympus.py"
"Bug Tracker" = "https://github.com/devKaos117/Olympus.py/issues"